added teacher register
